syntax = "proto3";
package syncer;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

enum MessageType {
  CLIPBOARD = 0;
  GENERIC_TEXT = 1;
  CONNECTED_DEVICES = 2;
  SERVER_COMMAND = 3;
}

message ClipboardMessage { string content = 1; }

message DeviceInfo {
  string id = 1;
  string ip = 2;
  string name = 3;
  string platform = 4;
  bool connected = 5;
  int64 last_seen = 6;
}

message ConnectedDevices { repeated DeviceInfo devices = 1; }

message ClientMessage {
  string id = 1;
  int64 createdAt = 2;
  MessageType type = 3;
  // for = "0" -> broadcast, for = "1" -> server command
  string for = 8;

  oneof payload {
    ClipboardMessage Clipboard = 4;
    GenericTextMessage GenericText = 5;
    google.protobuf.Empty empty = 6;
    ServerCommand ServerCommand = 7;
  }
}

message ServerMessage {
  string id = 1;
  string senderId = 2;
  int64 createdAt = 3;
  MessageType type = 4;

  oneof payload {
    ClipboardMessage Clipboard = 5;
    ConnectedDevices ConnectedDevices = 6;
    GenericTextMessage GenericText = 7;
  }
}

message ServerCommand {
  // command name
  Command command = 1;
  // json encoded data
  string data = 2;
}

enum Command {
  REFRESH_DEVICES = 0;
  DISCONNECT = 1;
}

message GenericTextMessage { string text = 1; }

service MessageService {
  rpc StreamMessages(google.protobuf.Empty) returns (stream ServerMessage);
  rpc SendMessage(stream ClientMessage) returns (google.protobuf.Empty);
  rpc IsReachable(google.protobuf.Empty) returns (google.protobuf.BoolValue);
}